hphp/hack/test/typecheck/ffp/invalid_foreach_arrow1.php.exp
File "invalid_foreach_arrow1.php", line 4, characters 21-20:
An arrow ('=>') or right parenthesis (')') is expected here. (Parsing[1002])
